<resources>
    <string name="app_name">Placeholder Messages</string>
    <string name="action_reload">Reload</string>
    <string name="action_favorite">Favorite</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="general_error">Some error occurred</string>
    <string name="all_posts">All</string>
    <string name="favorite_posts">Favorite</string>
    <string name="posts_title">Posts</string>
    <string name="posts_description">Description</string>
    <string name="posts_user">User data</string>
    <string name="posts_comments">Comments</string>
    <string name="username">Username: %s</string>
    <string name="user_phone">Phone: %s</string>
    <string name="user_email">Email: %s</string>
    <string name="user_website">Website: %s</string>
    <string name="posts_empty_msg">There are no post, please reload.</string>
</resources>